--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 mysqldb = {
   driver = "com.mysql.cj.jdbc.Driver",
-  url = "jdbc:mysql://127.0.0.1:3306/mydb?serverTimezone=UTC",
+  url = "jdbc:mysql://127.0.0.1:3306/annodomini",
   user = "root",
   password = "mysql1234",
   connectionPool = disabled
